[package]
name = "rsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
nix = { version = "0.27.1", features = ["user"] }
once_cell = "1.19.0"
parking_lot = "0.12.1"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = "1.0.193"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
