[package]
name = "rsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
directories = "5.0.1"
humantime = "2.1.0"
nix = { version = "0.27.1", features = ["user", "signal"] }
once_cell = "1.19.0"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = "1.0.193"
serde_with = "3.4.0"
tabled = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
